<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.agd.sa.tictactoe2018.OptionActivity"

    >
    <LinearLayout
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="#fff"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/optionText"
            android:padding="10dp"
            android:background="@drawable/button_style3"
            android:textColor="#fff"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/options_title"
            android:textSize="35sp"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>
    <LinearLayout
        android:background="@drawable/button_style2"
        android:orientation="vertical"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:background="@drawable/button_style4"
            android:id="@+id/soundheadText"
            android:layout_gravity="center"
            android:textColor="#fff"
            android:textSize="25sp"
            android:text="Sound:"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight=".6"/>
        <LinearLayout
            android:layout_gravity="center"
            android:id="@+id/soundMode"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button

                android:padding="10dp"
                android:id="@+id/soundOn"
                android:text="@string/on"
                style="@style/selection_radioButtons1"/>
            <Button
                android:id="@+id/soundOff"
                android:text="@string/off"
                style="@style/selection_radioButtons1"/>
        </LinearLayout>
        <TextView

            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:background="@drawable/button_style4"
            android:id="@+id/rateheadText"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="#fff"
            android:textSize="25sp"
            android:text="@string/rate_text"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight=".6"
            />
        <Button
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/rateNow"
            android:onClick="rateMethod"
            android:padding="10dp"
            android:background="@drawable/button_style1"
            android:layout_gravity="center"
            android:textColor="#fff"
            android:textSize="20sp"
            android:text="@string/rate_now"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight=".7"
            tools:ignore="OnClick" />
    </LinearLayout>
    <RelativeLayout
        android:background="@drawable/button_style2"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:scaleType="fitXY"
            android:onClick="showInfo"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:background="@drawable/info"
            android:layout_width="50dp"
            android:layout_height="50dp" />
        <Button

            android:padding="5dp"
            android:textSize="15sp"
            android:scaleType="fitXY"
            android:id="@+id/shareButton"
            android:onClick="shareitNow"
            android:text="@string/shareText"
            android:background="@drawable/button_style1"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_width="100dp"
            android:layout_height="50dp" />
        <ImageView
            android:scaleType="fitXY"
            android:onClick="goToMenu"
            android:layout_margin="10dp"
            android:src="@drawable/back"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_width="70dp"
            android:layout_height="70dp" />
    </RelativeLayout>
</LinearLayout>
