<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button_style1">
    <TextView

        android:id="@+id/winText"
        android:fontFamily="serif"
        android:textColor="#fff"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:background="@drawable/button_style4"
        android:text="@string/results"
        android:textSize="30sp"
        android:layout_margin="5dp"
        android:padding="15dp"
        android:layout_weight="1.3"
        android:layout_width="wrap_content"
        android:layout_height="0dp" />
    <ImageView
        android:layout_gravity="center"
        android:background="@drawable/stars"
        android:text="@string/exit_title"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <Button
        android:visibility="invisible"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".8"/>

    <TextView
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/win1"
        android:fontFamily="serif"
        android:textColor="#fff"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@drawable/button_style4"
        android:text="1. Player 1"
        android:textSize="25sp"

        android:padding="5dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/win2"
        android:fontFamily="serif"
        android:textColor="#fff"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@drawable/button_style4"
        android:text="2. Player 2"
        android:textSize="25sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="5dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <LinearLayout
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button

            android:id="@+id/winOk"
            android:padding="5dp"
            android:background="@drawable/button_style4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#fff"
            android:text="@string/ok"
            android:textSize="30dp"/>

    </LinearLayout>


</LinearLayout>